Se termino el html|Se añadio la carpeta images

--- a/index.html
+++ b/index.html
@@ -10,12 +10,235 @@
   <title>David Cayo</title>
 </head>
 <body>
+  <!-- Header -->
   <header>
-    <nav></nav>
+    <!-- Menu Pc -->
+    <div class="menu-pc">
+      <nav class="main-menu">
+        <ul class="main-menu__list">
+          <li class="main-menu__item">
+            <a class="main-menu__link" href="#about">About me</a>
+          </li>
+          <li class="main-menu__item">
+            <a class="main-menu__link" href="#portfolio">Portfolio</a>
+          </li>
+          <li class="main-menu__item">
+            <a class="main-menu__link" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <!-- End menu pc -->
+
+    <!-- Menu mobile -->
+    <div class="menu-mobile">
+      <div class="burger-menu">
+        <img src="" alt="">
+      </div>
+      <nav class="main-menu">
+        <ul class="main-menu__list">
+          <li class="main-menu__item">
+            <a class="main-menu__link" href="#about">About me</a>
+          </li>
+          <li class="main-menu__item">
+            <a class="main-menu__link" href="#portfolio">Portfolio</a>
+          </li>
+          <li class="main-menu__item">
+            <a class="main-menu__link" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <!-- End menu mobile -->
   </header>
+  <!-- End header -->
 
   <main>
+    <!-- Section banner -->
+    <section class="main-banner">
+      <div class="main-banner__name">
+        <h1>Hello, my name is David</h1>
+      </div>
+      <div class="main-banner__photo">
+        <img src="" alt="Full body photo">
+      </div>
+    </section>
+    <!-- End section banner -->
 
+    <!-- Section about me -->
+    <section class="about">
+      <h2>ABOUT ME</h2>
+      <div class="about__container">
+        <img src="" alt="" class="about__container--img">
+        <p class="about__container--descrip">
+          I am a Systems Analyst and self-taught web developer. 
+          I love the front-end technologies, and I like to give web pages that first impression that makes users stay on them.
+        </p>
+      </div>
+      <div class="about__technologies">
+        <h3>Technologies:</h3>
+        <div class="about__technologies--container">
+          <img src="images/html.svg"      alt="html logo">
+          <img src="images/css.svg"       alt="css logo">
+          <img src="images/js.svg"        alt="js logo">
+          <img src="images/sass.svg"      alt="sass logo">
+          <img src="images/bootstrap.svg" alt="bootstrap logo">
+          <img src="images/git.svg"       alt="git logo">
+          <img src="images/php.svg"       alt="php logo">
+          <img src="images/mysql.svg"     alt="mysql logo">
+          <img src="images/laravel.svg"   alt="laravel logo">
+        </div>
+      </div>
+    </section>
+    <!-- End section about me -->
+
+    <!-- Section Portfolio -->
+    <section class="portfolio">
+      <h2>PORTFOLIO</h2>
+      <div class="card">
+        <div class="card__header">
+          <div class="card__figure">
+            <div class="card__image">
+              <img src="" alt="">
+            </div>
+          </div>
+        </div>
+
+        <div class="card__body">
+          <h2 class="card__title">Lorem ipsum dolor sit amet.</h2>
+          <p class="card__copy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto asperiores cupiditate, nulla saepe nisi sequi.</p>
+        </div>
+
+        <div class="card__footer">
+          <div class="card__actions">
+            <button class="button">See</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card__header">
+          <div class="card__figure">
+            <div class="card__image">
+              <img src="" alt="">
+            </div>
+          </div>
+        </div>
+
+        <div class="card__body">
+          <h2 class="card__title">Lorem ipsum dolor sit amet.</h2>
+          <p class="card__copy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto asperiores cupiditate, nulla saepe nisi sequi.</p>
+        </div>
+
+        <div class="card__footer">
+          <div class="card__actions">
+            <button class="button">See</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card__header">
+          <div class="card__figure">
+            <div class="card__image">
+              <img src="" alt="">
+            </div>
+          </div>
+        </div>
+
+        <div class="card__body">
+          <h2 class="card__title">Lorem ipsum dolor sit amet.</h2>
+          <p class="card__copy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto asperiores cupiditate, nulla saepe nisi sequi.</p>
+        </div>
+
+        <div class="card__footer">
+          <div class="card__actions">
+            <button class="button">See</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card__header">
+          <div class="card__figure">
+            <div class="card__image">
+              <img src="" alt="">
+            </div>
+          </div>
+        </div>
+
+        <div class="card__body">
+          <h2 class="card__title">Lorem ipsum dolor sit amet.</h2>
+          <p class="card__copy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto asperiores cupiditate, nulla saepe nisi sequi.</p>
+        </div>
+
+        <div class="card__footer">
+          <div class="card__actions">
+            <button class="button">See</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card__header">
+          <div class="card__figure">
+            <div class="card__image">
+              <img src="" alt="">
+            </div>
+          </div>
+        </div>
+
+        <div class="card__body">
+          <h2 class="card__title">Lorem ipsum dolor sit amet.</h2>
+          <p class="card__copy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto asperiores cupiditate, nulla saepe nisi sequi.</p>
+        </div>
+
+        <div class="card__footer">
+          <div class="card__actions">
+            <button class="button">See</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card__header">
+          <div class="card__figure">
+            <div class="card__image">
+              <img src="" alt="">
+            </div>
+          </div>
+        </div>
+
+        <div class="card__body">
+          <h2 class="card__title">Lorem ipsum dolor sit amet.</h2>
+          <p class="card__copy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto asperiores cupiditate, nulla saepe nisi sequi.</p>
+        </div>
+
+        <div class="card__footer">
+          <div class="card__actions">
+            <button class="button">See</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End section portfolio -->
+
+    <!-- Section Contact -->
+    <section class="contact">
+      <div class="input-group">
+        <input type="text" class="input-group__input">
+        <input type="text" class="input-group__input">
+        <textarea name="" id="" cols="30" rows="10" class="input-group__textarea"></textarea>
+        <div class="input-group__footer">
+          <div class="input-group__actions">
+            <button class="button">Send</button>
+          </div>
+        </div>
+      </div>
+
+      <img src="images/gmail.svg" alt="Gmail image" class="contact-image">
+    </section>
+    <!-- End section contact -->
   </main>
 
   <footer>
