Se hizo los estilos de nav en el header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta name="description" content="I am a web developer self-taught,I love the front-end technologies">
   <meta name="keywords" content="Web development css html javascript">
   <meta name="author" content="David Cayo">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;700&family=Raleway&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
   <title>David Cayo</title>
 </head>
 <body>
