Se avanzo el css a un 80%

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="Web development css html javascript">
   <meta name="author" content="David Cayo">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;700&family=Raleway&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600;700&family=Raleway&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <title>David Cayo</title>
 </head>
@@ -35,9 +35,7 @@
 
     <!-- Menu mobile -->
     <div class="menu-mobile">
-      <div class="burger-menu">
-        <img src="" alt="">
-      </div>
+      
       <nav class="main-menu">
         <ul class="main-menu__list">
           <li class="main-menu__item">
@@ -51,6 +49,10 @@
           </li>
         </ul>
       </nav>
+
+      <div class="burger-menu">
+        <img src="" alt="">
+      </div>
     </div>
     <!-- End menu mobile -->
   </header>
@@ -60,10 +62,11 @@
     <!-- Section banner -->
     <section class="main-banner">
       <div class="main-banner__name">
-        <h1>Hello, my name is David</h1>
+        <h1 class="main-banner__title">Hello, <span>my name is</span> David</h1>
       </div>
       <div class="main-banner__photo">
-        <img src="" alt="Full body photo">
+        <!-- <img src="images/blob-white.svg" alt=""> -->
+        <img src="images/andrea.jpg" alt="Full body photo">
       </div>
     </section>
     <!-- End section banner -->
@@ -72,24 +75,53 @@
     <section class="about">
       <h2>ABOUT ME</h2>
       <div class="about__container">
-        <img src="" alt="" class="about__container--img">
+        <img src="" alt="Profile picture" class="about__container--img">
         <p class="about__container--descrip">
-          I am a Systems Analyst and self-taught web developer. 
+          Hi, my name is David Cayo and I am a Systems Analyst and self-taught web developer.
+          <br>
+          <br>
           I love the front-end technologies, and I like to give web pages that first impression that makes users stay on them.
         </p>
       </div>
       <div class="about__technologies">
         <h3>Technologies:</h3>
         <div class="about__technologies--container">
-          <img src="images/html.svg"      alt="html logo">
-          <img src="images/css.svg"       alt="css logo">
-          <img src="images/js.svg"        alt="js logo">
-          <img src="images/sass.svg"      alt="sass logo">
-          <img src="images/bootstrap.svg" alt="bootstrap logo">
-          <img src="images/git.svg"       alt="git logo">
-          <img src="images/php.svg"       alt="php logo">
-          <img src="images/mysql.svg"     alt="mysql logo">
-          <img src="images/laravel.svg"   alt="laravel logo">
+          <div>
+            <img src="images/html.svg" alt="html logo">
+            <span>HTML</span>
+          </div>
+          <div>
+            <img src="images/css.svg" alt="css logo">
+            <span>CSS</span>
+          </div>
+          <div>
+            <img src="images/js.svg" alt="js logo">
+            <span>Javascript</span>
+          </div>
+          <div>
+            <img src="images/sass.svg" alt="sass logo">
+            <span>SASS</span>
+          </div>
+          <div>
+            <img src="images/bootstrap.svg" alt="bootstrap logo">
+            <span>BOOTSTRAP</span>
+          </div>
+          <div>
+            <img src="images/git.svg" alt="git logo">
+            <span>GIT</span>
+          </div>
+          <div>
+            <img src="images/php.svg" alt="php logo">
+            <span>PHP</span>
+          </div>
+          <div>
+            <img src="images/mysql.svg" alt="mysql logo">
+            <span>MySQL</span>
+          </div>
+          <div>
+            <img src="images/laravel.svg" alt="laravel logo">
+            <span>LARAVEL</span>
+          </div>
         </div>
       </div>
     </section>
@@ -98,128 +130,132 @@
     <!-- Section Portfolio -->
     <section class="portfolio">
       <h2>PORTFOLIO</h2>
-      <div class="card">
-        <div class="card__header">
-          <div class="card__figure">
-            <div class="card__image">
-              <img src="" alt="">
+      <div class="card__container">
+        <div class="card">
+          <div class="card__header">
+            <div class="card__figure">
+              <div class="card__image">
+                <img src="images/andrea.jpg" alt="">
+              </div>
+            </div>
+          </div>
+
+          <div class="card__body">
+            <h2 class="card__title">Lorem ipsum dolor sit amet.</h2>
+            <p class="card__copy">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+              Iusto asperiores cupiditate, nulla saepe nisi sequi.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum placeat quidem cupiditate exercitationem earum perspiciatis, tenetur aliquid asperiores neque natus odit voluptates, ipsa, sunt velit omnis quos inventore! Vel, cupiditate!</p>
+          </div>
+
+          <div class="card__footer">
+            <div class="card__actions">
+              <a href="#" class="btn btn-primary">SEE PROJECT</a>
             </div>
           </div>
         </div>
 
-        <div class="card__body">
-          <h2 class="card__title">Lorem ipsum dolor sit amet.</h2>
-          <p class="card__copy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto asperiores cupiditate, nulla saepe nisi sequi.</p>
-        </div>
-
-        <div class="card__footer">
-          <div class="card__actions">
-            <button class="button">See</button>
+        <div class="card">
+          <div class="card__header">
+            <div class="card__figure">
+              <div class="card__image">
+                <img src="" alt="">
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
 
-      <div class="card">
-        <div class="card__header">
-          <div class="card__figure">
-            <div class="card__image">
-              <img src="" alt="">
+          <div class="card__body">
+            <h2 class="card__title">Lorem ipsum dolor sit amet.</h2>
+            <p class="card__copy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto asperiores cupiditate, nulla saepe nisi sequi.</p>
+          </div>
+
+          <div class="card__footer">
+            <div class="card__actions">
+              <a href="#" class="btn btn-primary">SEE PROJECT</a>
             </div>
           </div>
         </div>
 
-        <div class="card__body">
-          <h2 class="card__title">Lorem ipsum dolor sit amet.</h2>
-          <p class="card__copy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto asperiores cupiditate, nulla saepe nisi sequi.</p>
-        </div>
-
-        <div class="card__footer">
-          <div class="card__actions">
-            <button class="button">See</button>
+        <div class="card">
+          <div class="card__header">
+            <div class="card__figure">
+              <div class="card__image">
+                <img src="" alt="">
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
 
-      <div class="card">
-        <div class="card__header">
-          <div class="card__figure">
-            <div class="card__image">
-              <img src="" alt="">
+          <div class="card__body">
+            <h2 class="card__title">Lorem ipsum dolor sit amet.</h2>
+            <p class="card__copy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto asperiores cupiditate, nulla saepe nisi sequi.</p>
+          </div>
+
+          <div class="card__footer">
+            <div class="card__actions">
+              <a href="#" class="btn btn-primary">SEE PROJECT</a>
             </div>
           </div>
         </div>
 
-        <div class="card__body">
-          <h2 class="card__title">Lorem ipsum dolor sit amet.</h2>
-          <p class="card__copy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto asperiores cupiditate, nulla saepe nisi sequi.</p>
-        </div>
-
-        <div class="card__footer">
-          <div class="card__actions">
-            <button class="button">See</button>
+        <div class="card">
+          <div class="card__header">
+            <div class="card__figure">
+              <div class="card__image">
+                <img src="" alt="">
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
 
-      <div class="card">
-        <div class="card__header">
-          <div class="card__figure">
-            <div class="card__image">
-              <img src="" alt="">
+          <div class="card__body">
+            <h2 class="card__title">Lorem ipsum dolor sit amet.</h2>
+            <p class="card__copy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto asperiores cupiditate, nulla saepe nisi sequi.</p>
+          </div>
+
+          <div class="card__footer">
+            <div class="card__actions">
+              <a href="#" class="btn btn-primary">SEE PROJECT</a>
             </div>
           </div>
         </div>
 
-        <div class="card__body">
-          <h2 class="card__title">Lorem ipsum dolor sit amet.</h2>
-          <p class="card__copy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto asperiores cupiditate, nulla saepe nisi sequi.</p>
-        </div>
-
-        <div class="card__footer">
-          <div class="card__actions">
-            <button class="button">See</button>
+        <div class="card">
+          <div class="card__header">
+            <div class="card__figure">
+              <div class="card__image">
+                <img src="" alt="">
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
 
-      <div class="card">
-        <div class="card__header">
-          <div class="card__figure">
-            <div class="card__image">
-              <img src="" alt="">
+          <div class="card__body">
+            <h2 class="card__title">Lorem ipsum dolor sit amet.</h2>
+            <p class="card__copy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto asperiores cupiditate, nulla saepe nisi sequi.</p>
+          </div>
+
+          <div class="card__footer">
+            <div class="card__actions">
+              <a href="#" class="btn btn-primary">SEE PROJECT</a>
             </div>
           </div>
         </div>
 
-        <div class="card__body">
-          <h2 class="card__title">Lorem ipsum dolor sit amet.</h2>
-          <p class="card__copy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto asperiores cupiditate, nulla saepe nisi sequi.</p>
-        </div>
-
-        <div class="card__footer">
-          <div class="card__actions">
-            <button class="button">See</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card__header">
-          <div class="card__figure">
-            <div class="card__image">
-              <img src="" alt="">
+        <div class="card">
+          <div class="card__header">
+            <div class="card__figure">
+              <div class="card__image">
+                <img src="" alt="">
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="card__body">
-          <h2 class="card__title">Lorem ipsum dolor sit amet.</h2>
-          <p class="card__copy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto asperiores cupiditate, nulla saepe nisi sequi.</p>
-        </div>
+          <div class="card__body">
+            <h2 class="card__title">Lorem ipsum dolor sit amet.</h2>
+            <p class="card__copy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto asperiores cupiditate, nulla saepe nisi sequi.</p>
+          </div>
 
-        <div class="card__footer">
-          <div class="card__actions">
-            <button class="button">See</button>
+          <div class="card__footer">
+            <div class="card__actions">
+              <a href="#" class="btn btn-primary">SEE PROJECT</a>
+            </div>
           </div>
         </div>
       </div>
@@ -228,18 +264,22 @@
 
     <!-- Section Contact -->
     <section class="contact">
-      <div class="input-group">
-        <input type="text" class="input-group__input">
-        <input type="text" class="input-group__input">
-        <textarea name="" id="" cols="30" rows="10" class="input-group__textarea"></textarea>
-        <div class="input-group__footer">
-          <div class="input-group__actions">
-            <button class="button">Send</button>
+      <h2>CONCTACT</h2>
+      <div class="contact-container">
+        <div class="input-group">
+          <input type="text" class="input-group__input" placeholder="Name" required>
+          <input type="email" class="input-group__input" placeholder="E-mail" required>
+          <textarea name="" id="" cols="30" rows="10" class="input-group__textarea" placeholder="Message" required></textarea>
+          <div class="input-group__footer">
+            <div class="input-group__actions">
+              <button type="submit" class="btn btn-secondary">SEND</button>
+            </div>
           </div>
         </div>
+        <div class="img-container">
+          <img src="images/mailbox.svg" alt="Gmail image" class="contact-image">
+        </div>
       </div>
-
-      <img src="images/gmail.svg" alt="Gmail image" class="contact-image">
     </section>
     <!-- End section contact -->
   </main>
