Se puso algunos enlaces a la sección de portafolio con los proyectos

--- a/index.html
+++ b/index.html
@@ -139,6 +139,8 @@
     <section id="portfolio" class="portfolio">
       <h2>PORTFOLIO</h2>
       <div class="card__container fade_down">
+        
+        <!-- Project 1 -->
         <div class="card">
           <div class="card__header">
             <div class="card__figure">
@@ -156,11 +158,12 @@
 
           <div class="card__footer">
             <div class="card__actions">
-              <a href="#" class="btn btn-primary">SEE PROJECT</a>
+              <a href="https://agency-ab.netlify.app" target="_blank" class="btn btn-primary">SEE PROJECT</a>
             </div>
           </div>
         </div>
 
+        <!-- Project 2 -->
         <div class="card">
           <div class="card__header">
             <div class="card__figure">
@@ -179,11 +182,12 @@
 
           <div class="card__footer">
             <div class="card__actions">
-              <a href="#" class="btn btn-primary">SEE PROJECT</a>
+              <a href="https://basic-company.netlify.app" target="_blank" class="btn btn-primary">SEE PROJECT</a>
             </div>
           </div>
         </div>
 
+        <!-- Project 3 -->
         <div class="card">
           <div class="card__header">
             <div class="card__figure">
@@ -201,11 +205,12 @@
 
           <div class="card__footer">
             <div class="card__actions">
-              <a href="#" class="btn btn-primary">SEE PROJECT</a>
+              <a href="https://coffee-and-cake.netlify.app" target="_blank" class="btn btn-primary">SEE PROJECT</a>
             </div>
           </div>
         </div>
 
+        <!-- Project 4 -->
         <div class="card">
           <div class="card__header">
             <div class="card__figure">
@@ -223,11 +228,12 @@
 
           <div class="card__footer">
             <div class="card__actions">
-              <a href="#" class="btn btn-primary">SEE PROJECT</a>
+              <a href="https://sdesign-studio.netlify.app" target="_blank" class="btn btn-primary">SEE PROJECT</a>
             </div>
           </div>
         </div>
 
+        <!-- Project 5 -->
         <div class="card">
           <div class="card__header">
             <div class="card__figure">
